--- a/assets/css/snt1.css
+++ b/assets/css/snt1.css
@@ -74,7 +74,7 @@
         height: 65px;
         width: 700px;
         font-size: 20px;
-        font-weight: 500;  
+        font-weight: 400;  
         /* outline: none; */
          /* -webkit-box-shadow: 0px 0px 45px 10px rgba(0,0,0,0.58);
         -moz-box-shadow: 0px 0px 45px 10px rgba(0,0,0,0.58);
@@ -85,12 +85,14 @@
         background: #ffa600;
         border: 4px solid black;
         cursor: pointer;
+        font-weight: 500;  
     }
     
     .table__toggle:hover {
         background: #ffa600;
         border: 4px solid black;
         cursor: pointer;
+        font-weight: 500;
     }
 
     li {
@@ -113,9 +115,9 @@
         top: -65px;
         width: 700px;
         border: 5px solid black;
-        -webkit-box-shadow: 0px 0px 45px 10px rgba(0,0,0,0.58);
+        /* -webkit-box-shadow: 0px 0px 45px 10px rgba(0,0,0,0.58);
         -moz-box-shadow: 0px 0px 45px 10px rgba(0,0,0,0.58);
-        box-shadow: 0px 0px 45px 10px rgba(0,0,0,0.58);
+        box-shadow: 0px 0px 45px 10px rgba(0,0,0,0.58); */
     }
     
     /* THIS IS A FAKE DIV TO MASK DIFFERENT FONTS IN PICTURE TEMPORARILY !!! */
@@ -171,7 +173,7 @@
         height: 100%;
         width: 9.43%;
         font-size: 28px;
-        font-weight: 400;
+        font-weight: 200;
         font-family: 'Orbitron', sans-serif;
     }
     
@@ -179,7 +181,7 @@
         color: rgb(0, 0, 0);
         /* #1897b4 */
         background: orange;
-        font-weight: 600;
+        font-weight: 500;
         cursor: pointer;
     }
     
@@ -240,6 +242,7 @@
         /* font-family: 'Bungee Inline', cursive; */
         font-family: 'Orbitron', sans-serif;
         text-transform: uppercase;
+        font-weight: 400;
         background: grey;
         border: 4px solid #000000;
         /* padding-right: 5px;
@@ -256,6 +259,7 @@
     .startPlay:hover {
         background: #ffa600;
         cursor: pointer;
+        font-weight:600;
         border: 3px solid black;
     }
     
@@ -285,6 +289,7 @@
     
     .instruction {
         font-size: 32px;
+        font-weight: 400;
     }
     
     .message {
@@ -383,7 +388,7 @@
     /* STAT DIVS */
     .ordered-stat {
         /* display: flex; */
-        flex-direction: column;
+        /* flex-direction: column; */
         background: #ffa600;
         border: 5px solid black;
         width: 700px;
@@ -406,7 +411,8 @@
         font-size: 20px;
     }
 
-    .ordered-stat.ordered-stat.first-ordered-stat-container {
+    .ordered-stat.first-ordered-stat-container {
+        justify-content: center;
         margin-bottom: 20px;
     }
 
@@ -420,14 +426,15 @@
 
     /* DIV SPANS */
     .ordered-stat.first-ordered-stat-container span {
-        /* display: inline-block; */
-        margin: 0px 2px 0px 0px;
+        display: inline-block;
+        height: fit-content;
+        margin: 8px 2px 0px 0px;
         padding: 4px;
         border: 3px solid black;
 
     } 
 
-    .ordered-stat.first-ordered-stat-container, .ordered-stat.second-ordered-stat-container {
+    .ordered-stat.second-ordered-stat-container {
         /* color: yellow; */
         padding-top: 15px;
     }
