--- a/assets/css/xsmall.css
+++ b/assets/css/xsmall.css
@@ -60,34 +60,38 @@
     
     .sq-table-img-container {
         width: fit-content;
-        margin: 20px auto;
+        height: 250px;
+        margin: 20px 0px 13px 0px; 
+        /* border: 3px solid green; */
     } 
     
     .sq-table-img {
+        /* z-index: -1; */
         width: 100%;
         margin-bottom: 0px;
+        position: relative;
+        top: -30px;
         /* border: 3px solid black; */
     }
     
     /* THIS IS A FAKE DIV TO MASK DIFFERENT FONTS IN PICTURE TEMPORARILY !!! */
-    /* HIDDEN IN XSMALL SIZE */
     .table-img-header {
-        /* z-index: 1; */
-        /* position: relative;
+        z-index: 1;
+        position: relative;
         width: 100%;
-        height: 65px;
+        height: 35px;
         background: #ffa600;
-        border: 5px solid black; */
+        /* border: 5px solid black; */
 
-        display: none;
+        /* display: none; */
 }
 
-.table-img-header h2 {
-    /* font-size: 20px;
-    font-weight: 400;
-    margin-top: 17px; */
-    display: none;
-}
+    .table-img-header h2 {
+        font-size: 12px;
+        font-weight: 400;
+        padding-top: 8px;
+        /* display: none; */
+    }
 
     /* FONT SIZES */
 
@@ -300,7 +304,7 @@
     
     .ordered-stat {
         display: flex;
-        flex-direction: column;
+        /* flex-direction: column; */
         background: #ffa600;
         width: 100%;
         min-height: 35px;
@@ -313,7 +317,9 @@
         display:none;
     }
     
-    .ordered-stat.ordered-stat.first-ordered-stat-container {
+    .ordered-stat.first-ordered-stat-container {
+        /* align-items: center; */
+        justify-content: center;
         margin-top: 0px;
         margin-bottom: 20px;
     }
@@ -328,12 +334,18 @@
 
     /* DIV SPANS */
     .ordered-stat.first-ordered-stat-container span {
-        /* display: inline-block; */
-        margin: 8px 2px 0px 2px;
-        /* border: 1px solid black; */
+        display: inline-block;
+        height: fit-content;
+        padding: 2px;
+        margin: 7px 2px 0px 2px;
+        border: 1px solid black;
     } 
     
-    .ordered-stat.first-ordered-stat-container, .ordered-stat.second-ordered-stat-container {
+    .ordered-stat.first-ordered-stat-container {
+        /* padding-top: 9px; */
+    }
+
+    .ordered-stat.second-ordered-stat-container {
         /* color: yellow; */
         padding-top: 9px;
     }
