--- a/assets/css/xsmall.css
+++ b/assets/css/xsmall.css
@@ -58,11 +58,14 @@
         display: none;
     }
     
+    /* !!! THIS IS AFFECTED BY FAKE DIV !!! */
+    /* ADD BORDER TO SEE !!! */
     .sq-table-img-container {
         width: fit-content;
-        height: 250px;
-        margin: 20px 0px 13px 0px; 
-        /* border: 3px solid green; */
+        /* height: 250px; */
+        height: fit-content;
+        margin: 20px 0px 0px 0px; 
+        border: 3px solid green;
     } 
     
     .sq-table-img {
@@ -320,7 +323,7 @@
     .ordered-stat.first-ordered-stat-container {
         /* align-items: center; */
         justify-content: center;
-        margin-top: 0px;
+        /* margin-top: 5%; */
         margin-bottom: 20px;
     }
 
@@ -347,6 +350,7 @@
 
     .ordered-stat.second-ordered-stat-container {
         /* color: yellow; */
+        /* margin-top: 5%; */
         padding-top: 9px;
     }
 
